Test compile to assembly with -S argument specifier using gcc to compile

--- a/ExampleCPrograms/Makefile
+++ b/ExampleCPrograms/Makefile
@@ -1,6 +1,6 @@
 all:
-	gcc -g -O0 hello.c -S hello.s
-	gcc -g -s hello.s -o hello.exe
+	gcc -O0 hello.c -S hello.s
+	gcc -s hello.s -o hello.exe
 	
 clean:
 	rm -rf hello.exe
