--- a/squash/squash.vcxproj.filters
+++ b/squash/squash.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClCompile Include="Lexer.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Optimiser.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Assembler.h">
