--- a/squash/squash.vcxproj
+++ b/squash/squash.vcxproj
@@ -127,12 +127,14 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Assembler.c" />
     <ClCompile Include="AST.c" />
     <ClCompile Include="Dictionary.c" />
     <ClCompile Include="EntryPoint.c" />
     <ClCompile Include="Lexer.c" />
     <ClCompile Include="List.c" />
     <ClCompile Include="Optimiser.c" />
+    <ClCompile Include="sb.c" />
     <ClCompile Include="Symbols.c" />
   </ItemGroup>
   <ItemGroup>
@@ -143,6 +145,7 @@
     <ClInclude Include="List.h" />
     <ClInclude Include="Minifier.h" />
     <ClInclude Include="Optimiser.h" />
+    <ClInclude Include="sb.h" />
     <ClInclude Include="Symbols.h" />
     <ClInclude Include="Token.h" />
   </ItemGroup>
