Created new EntryPoint.c driver using squash_compiler_t instance.
Added tests from scripts folder in C# version.

--- a/squash/squash.vcxproj.filters
+++ b/squash/squash.vcxproj.filters
@@ -48,6 +48,12 @@
     <ClCompile Include="Minifier.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Token.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="FileIO.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Assembler.h">
@@ -81,6 +87,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="SquashCompiler.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="FileIO.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
