--- a/squash/Makefile
+++ b/squash/Makefile
@@ -1,10 +1,14 @@
 CC=gcc
 CFLAGS=-I.
 DEPS = 
-OBJ = EntryPoint.o Assembly.o AST.o
+HEADERS =
+OBJ = EntryPoint.o FileIO.o SquashCompiler.o Dictionary.o List.o  Lexer.o Assembler.o AST.o Symbols.o Token.o sb.o Minifier.o Optimiser.o
 
 %.o: %.c $(DEPS)
 	$(CC) -c -o $@ $< $(CFLAGS)
 
 all: $(OBJ)
 	$(CC) -o squash $^ $(CFLAGS)
+	
+clean:
+	rm -rf *.o
