Logger with different logging types and colour changes.

--- a/squash/squash.vcxproj.filters
+++ b/squash/squash.vcxproj.filters
@@ -54,6 +54,9 @@
     <ClCompile Include="FileIO.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Logger.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Assembler.h">
@@ -90,6 +93,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="FileIO.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Logger.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
