--- a/squash/squash.vcxproj
+++ b/squash/squash.vcxproj
@@ -136,6 +136,7 @@
     <ClCompile Include="FileIO.c" />
     <ClCompile Include="Lexer.c" />
     <ClCompile Include="List.c" />
+    <ClCompile Include="Logger.c" />
     <ClCompile Include="Minifier.c" />
     <ClCompile Include="Optimiser.c" />
     <ClCompile Include="sb.c" />
@@ -150,6 +151,7 @@
     <ClInclude Include="FileIO.h" />
     <ClInclude Include="Lexer.h" />
     <ClInclude Include="List.h" />
+    <ClInclude Include="Logger.h" />
     <ClInclude Include="Minifier.h" />
     <ClInclude Include="Optimiser.h" />
     <ClInclude Include="sb.h" />
