Logger object file added to Makefile.

--- a/squash/Makefile
+++ b/squash/Makefile
@@ -2,7 +2,7 @@ CC=gcc
 CFLAGS=-I.
 DEPS = 
 HEADERS =
-OBJ = EntryPoint.o FileIO.o SquashCompiler.o Dictionary.o List.o Lexer.o Assembler.o AST.o Symbols.o Token.o sb.o Minifier.o Optimiser.o
+OBJ = EntryPoint.o FileIO.o SquashCompiler.o Dictionary.o List.o Lexer.o Assembler.o AST.o Symbols.o Token.o sb.o Minifier.o Logger.o Optimiser.o
 
 %.o: %.c $(DEPS)
 	$(CC) -c -o $@ $< $(CFLAGS)
