--- a/squash/Makefile
+++ b/squash/Makefile
@@ -1,5 +1,5 @@
 CC=gcc
-CFLAGS=-I.
+CFLAGS=-I. -Wall -pedantic
 DEPS = 
 HEADERS =
 OBJ = EntryPoint.o FileIO.o SquashCompiler.o Dictionary.o List.o Lexer.o Assembler.o AST.o Symbols.o Token.o sb.o Minifier.o Logger.o Optimiser.o
