Breaking changes - encoder not yet finished. Also removed old C# compiler and put it in its own project.

--- a/squash/squash.vcxproj
+++ b/squash/squash.vcxproj
@@ -132,12 +132,15 @@
     <ClCompile Include="Assembler.c" />
     <ClCompile Include="AST.c" />
     <ClCompile Include="Dictionary.c" />
+    <ClCompile Include="EncoderInstructionSet.c" />
     <ClCompile Include="EntryPoint.c" />
     <ClCompile Include="FileIO.c" />
+    <ClCompile Include="Instruction.c" />
     <ClCompile Include="Lexer.c" />
     <ClCompile Include="List.c" />
     <ClCompile Include="Logger.c" />
     <ClCompile Include="Minifier.c" />
+    <ClCompile Include="Encoder.c" />
     <ClCompile Include="Optimiser.c" />
     <ClCompile Include="sb.c" />
     <ClCompile Include="SquashCompiler.c" />
@@ -148,11 +151,17 @@
     <ClInclude Include="Assembler.h" />
     <ClInclude Include="AST.h" />
     <ClInclude Include="Dictionary.h" />
+    <ClInclude Include="EncoderInstructionSet.h" />
+    <ClInclude Include="Enums.h" />
     <ClInclude Include="FileIO.h" />
+    <ClInclude Include="Instruction.h" />
+    <ClInclude Include="InstructionOpCounts.h" />
     <ClInclude Include="Lexer.h" />
     <ClInclude Include="List.h" />
     <ClInclude Include="Logger.h" />
     <ClInclude Include="Minifier.h" />
+    <ClInclude Include="Encoder.h" />
+    <ClInclude Include="Mnemonic.h" />
     <ClInclude Include="Optimiser.h" />
     <ClInclude Include="sb.h" />
     <ClInclude Include="SquashCompiler.h" />
