Breaking changes working on executable encoder by porting from C# Iced assembler.

--- a/squash/squash.vcxproj
+++ b/squash/squash.vcxproj
@@ -155,6 +155,7 @@
     <ClInclude Include="Enums.h" />
     <ClInclude Include="FileIO.h" />
     <ClInclude Include="Instruction.h" />
+    <ClInclude Include="InstructionMemorySizes.h" />
     <ClInclude Include="InstructionOpCounts.h" />
     <ClInclude Include="Lexer.h" />
     <ClInclude Include="List.h" />
