--- a/squash/squash.vcxproj.filters
+++ b/squash/squash.vcxproj.filters
@@ -128,5 +128,8 @@
     <ClInclude Include="InstructionMemorySizes.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="OpCodeInfo.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
