Implemented OpCodeInfo and usage in Instruction.h.

--- a/squash/squash.vcxproj
+++ b/squash/squash.vcxproj
@@ -164,6 +164,7 @@
     <ClInclude Include="Encoder.h" />
     <ClInclude Include="Mnemonic.h" />
     <ClInclude Include="OpCodeInfo.h" />
+    <ClInclude Include="OpCodeInfoData.h" />
     <ClInclude Include="Optimiser.h" />
     <ClInclude Include="sb.h" />
     <ClInclude Include="SquashCompiler.h" />
