--- a/squash/squash.vcxproj.filters
+++ b/squash/squash.vcxproj.filters
@@ -131,5 +131,8 @@
     <ClInclude Include="OpCodeInfo.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="OpCodeInfoData.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
