InstructionMemorySizes data refactor.

--- a/squash/squash.vcxproj.filters
+++ b/squash/squash.vcxproj.filters
@@ -87,6 +87,9 @@
     <ClCompile Include="OpCodeInfoData.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="InstructionMemorySizes.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Assembler.h">
