--- a/squash/Makefile
+++ b/squash/Makefile
@@ -1,5 +1,5 @@
 CC=gcc
-CFLAGS=-I. -Wall -pedantic
+CFLAGS=-I. -Wall -pedantic -std=c23
 DEPS = 
 HEADERS =
 OBJ = EntryPoint.o FileIO.o SquashCompiler.o Instruction.o Dictionary.o List.o Lexer.o Assembler.o AST.o Symbols.o Token.o sb.o Minifier.o Logger.o Optimiser.o EncoderInstructionSet.o Instruction.Create.o InstructionMemorySizes.o InstructionOpCounts.o Mnemonic.o OpCodeInfo.o OpCodeInfoData.o Encoder.o
